# refactor_framework

./: .gitignore  CLAUDE.md  evaluation_report.md  intake.yaml  pyproject.toml
config/: default.yaml
legacy_sas_codebase/: README.md  mappings.yaml
legacy_sas_codebase/data/: generate_sample_data.py
legacy_sas_codebase/data/input/: enroll_mod_00.csv  enroll_mod_01.csv  enroll_mod_02.csv
legacy_sas_codebase/programs/: 00_config.sas  01_enroll_driver.sas  02_enroll_process.sas  config.py  enroll_driver.py  enroll_process.py
src/refactor_framework/: __init__.py  __main__.py  config.py  models.py
src/refactor_framework/archive/: ledger.py
src/refactor_framework/execute/: tracker.py
src/refactor_framework/intake/: interview.py
src/refactor_framework/mapping/: coverage.py  loader.py  migration_plan.py  scaffold.py
src/refactor_framework/methodology/: generator.py  renderer.py
src/refactor_framework/pipeline/: ai_engine.py  auto_approve.py  orchestrator.py
tests/: conftest.py  test_config.py  test_models.py
tests/fixtures/: sample_after.py  sample_before.py  sample_mappings.yaml
tests/test_archive/: test_ledger.py
tests/test_execute/: test_tracker.py
tests/test_mapping/: test_coverage.py  test_loader.py  test_scaffold.py
tests/test_methodology/: test_generator.py
tests/test_plan/: test_planner.py
tests/test_report/: test_diff.py  test_migration.py  test_renderer.py
tests/test_snapshot/: test_capture.py  test_metrics.py
tests/test_spec/: test_approval.py  test_generator.py
tests/test_test/: test_runner.py
(+19 files in other folders)
